apps/gym_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gym-app
  template:
    metadata:
      labels:
        app: gym-app
    spec:
      containers:
        - name: gym-app
          image: "geekspace/gym-app:v0.0.4"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
