apps/gym_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gym-app
  name: gym-app-svc
spec:
  type: ClusterIP
  ports:
    - name: gym-app
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: gym-app
