apps/gym_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
    - hosts:
      - gym-app.home.local
      - home-gym-app.dynv6.net
      secretName: gym-app-tls-cert
  rules:
    - host: gym-app.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-app-svc
                port:
                  number: 8080
    - host: home-gym-app.dynv6.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-app-svc
                port:
                  number: 8080
